--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,6 +1,7 @@
 .homepage-container {
   display: flex;
-  justify-content: center;
   flex-direction: row;
   background-color: aliceblue;
+  width: 100vw;
+  height: 100vh;
 }
