feat: some layout changes

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,7 +1,8 @@
 .homepage-container {
+  margin-top: -22px;
   display: flex;
   flex-direction: row;
   background-color: aliceblue;
-  width: 100vw;
+  width: 80vw;
   height: 100vh;
 }
