--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,21 @@
 .App {
+}
+
+.menu-details-container {
+  display: flex;
+  justify-content: center;
+}
+
+.navbar {
+  margin-top: -10px;
+  margin-left: 0px;
+  margin-right: 0px;
   text-align: center;
+  background-color: #282c34;
+  color: white;
+  height: 50px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
