--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -1,5 +1,6 @@
 .details {
-  display: flex;
+  /* display: flex; */
+  flex: 0.75;
   width: 70%;
   border: 1px solid black;
   flex-direction: column;
