feat: scroll to corresponding component and skiils component

--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -2,18 +2,22 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
-  background-image: linear-gradient(
-    to bottom right,
-    white,
-    yellow,
-    pink,
-    green
-  );
+}
+
+.education-heading {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 10px 0px;
 }
 
 .education-body {
   display: flex;
   flex-direction: row;
+  max-width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card {
@@ -21,11 +25,12 @@
   padding: 20px 10px;
   justify-content: center;
   flex-direction: column;
-  max-width: 210px;
-  max-height: 210px;
-  min-width: 210px;
-  min-height: 210px;
+  max-width: 200px;
+  max-height: 200px;
+  min-width: 200px;
+  min-height: 200px;
   margin-right: 10px;
+  margin-bottom: 10px;
   transition: transform 0.2s;
   box-shadow: 1px 2px 2px 1px rgb(238, 234, 234);
   border: 1px solid rgb(238, 234, 234);
@@ -58,10 +63,10 @@
   box-shadow: 1px 2px 2px 1px rgb(207, 206, 206);
   border: 1px solid rgb(221, 214, 214);
   background-image: linear-gradient(white, rgb(216, 212, 212));
-  max-width: 250px;
-  max-height: 250px;
-  min-width: 250px;
-  min-height: 250px;
+  max-width: 240px;
+  max-height: 240px;
+  min-width: 240px;
+  min-height: 240px;
   transform: scale(1.05);
 }
 
