--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,8 +1,21 @@
+@keyframes menu_heading {
+  from {
+    top: 100px;
+    opacity: 0;
+  }
+  to {
+    top: 0px;
+    opacity: 1;
+  }
+}
 .about {
   display: flex;
 
   flex-direction: column;
   padding: 30px;
+  animation-name: home_body;
+  animation-duration: 1s;
+  position: relative;
 }
 .about-heading {
   display: flex;
@@ -25,6 +38,10 @@
   box-shadow: 8px 8px 16px 8px rgba(0, 0, 0, 0.2);
   height: 150px;
   width: 150px;
+  transition: 5sec;
+}
+.about-card :hover {
+  transform: scale(1.05);
 }
 .about-role-logo {
   margin-left: 5px;
