--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -2,13 +2,26 @@
   /* display: flex; */
   flex: 0.25;
   width: 30%;
-  border: 1px solid black;
-  overflow: scroll;
+  border: 0.1px solid rgb(216, 216, 225);
+  /* overflow: scroll; */
+}
+@keyframes menu_heading {
+  from {
+    top: 100px;
+    opacity: 0;
+  }
+  to {
+    top: 0px;
+    opacity: 1;
+  }
 }
 .profile-picture {
   border-radius: 50%;
   height: 150px;
   width: 150px;
+  animation-name: home_body;
+  animation-duration: 1s;
+  position: relative;
 }
 .ul {
   list-style-type: none;
@@ -17,3 +30,40 @@
   width: 90%;
   margin-top: 30px;
 }
+
+.menu-heading {
+  cursor: pointer;
+  animation-name: home_body;
+  animation-duration: 1s;
+  position: relative;
+}
+.menu-heading:hover {
+  background-color: aliceblue;
+  transform: scale(1.1);
+  transition: 0.2s;
+  /* text-shadow: 2px 2px 4px #654747; */
+  /* text-transform: uppercase; */
+}
+.menu-name,
+.menu-role,
+.menu-copyright {
+  cursor: pointer;
+  animation-name: home_body;
+  animation-duration: 1s;
+  position: relative;
+}
+
+.menu-role:hover,
+.menu-name:hover {
+  transform: scale(1.25);
+  text-shadow: 1px 1px 2px #000000;
+  /* text-transform: uppercase; */
+  transition: transform 0.3s, text-shadow 0.3s;
+}
+
+/* .menu-name:hover {
+  transform: scale(1.1);
+  transition: 0.2s;
+  text-shadow: 2px 2px 4px #000000;
+  text-transform: uppercase;
+} */
